--- a/.gitignore
+++ b/.gitignore
@@ -1,70 +1,57 @@
-### macOS ###
-# General
+# -------------------------
+# macOS
+# -------------------------
 .DS_Store
 .AppleDouble
 .LSOverride
 
-# Icon must end with two
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-### Xcode ###
-# Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
-
-## User settings
-xcuserdata/
-
-## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
-*.xcscmblueprint
-*.xccheckout
-
-## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
-build/
-DerivedData/
-*.moved-aside
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-
-### Xcode Patch ###
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
-!*.xcworkspace/contents.xcworkspacedata
-/*.gcno
-
-### Projects ###
+# -------------------------
+# Tuist
+# -------------------------
+# Tuist가 생성하는 Xcode 파일은 재생성 가능 → 무시
 *.xcodeproj
 *.xcworkspace
 
-### Tuist derived files ###
-graph.dot
-Derived/
+# Tuist가 합성/생성물 넣는 폴더
+**/Derived/
 
-### Tuist managed dependencies ###
-Tuist/.build
+# Dependencies 아티팩트는 무시, Lockfiles만 추적
+Tuist/Dependencies/**
+!Tuist/Dependencies/Lockfiles/**
+
+# -------------------------
+# Swift Package Manager
+# -------------------------
+.build/
+.swiftpm/
+# 락파일은 커밋(재현성)
+!Package.resolved
+!.build/Package.resolved
+!Tuist/.build/Package.resolved
+
+# -------------------------
+# Xcode 잡파일
+# -------------------------
+**/*.xcuserdatad/
+**/*.xcuserstate
+*.xcscmblueprint
+*.xcresult
+*.moved-aside
+
+# Xcode build artifacts (when Build Location is Relative to Workspace)
+# e.g. Projects/<App>/build/XCBuildData, *.xcbuilddata, *.xcactivitylog
+build/
+**/build/
+**/Build/
+**/XCBuildData/
+*.xcactivitylog
+*.xcbuilddata
+
+# -------------------------
+# 기타 도구(있을 때만)
+# -------------------------
+Pods/
+Carthage/
+fastlane/report.xml
+fastlane/test_output/
+*.log
